--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,7 @@
 body {
   margin: 0;
-  font-family: 'Source Code Pro', monospace;
+  font-family: 'Inter', sans-serif;
   background-color: #E5E5E5;
-}
-
-code {
-  font-family: 'Source Code Pro', monospace;
 }
 
 .app-container{
@@ -19,10 +15,10 @@ code {
 .navbar-container{
   display: flex;
   justify-content: space-between;
-  position: sticky;
   top: 0;
   z-index: 1;
   background-color: #E5E5E5;
+  padding-bottom: 30px;
 }
 .navbar-brand{
   display: flex;
@@ -65,12 +61,17 @@ code {
   text-decoration: none;
   list-style-type: none;
   margin-right: 11px;
+  font-size: 14px;
+  color: #727A8B;
 }
-
+#note{
+  color: #5141A4;
+}
 
 .sidebar-container{
   flex: 1;
   border-radius: 8px;
+  padding: 128px 37px 51px 37px;
   height: 100vh;
   background-color: #110C35;
   
@@ -78,6 +79,17 @@ code {
 .sidebar-list{
   list-style: none;
   padding: 5px;
+}
+.list-item{
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  padding: 14px 17px;
+  font-size: 16px;
+  margin-bottom: 20px;
+  background-color: #434D64;
+  border-radius: 8px;
+  
 }
 .list-item{
   cursor: pointer;
@@ -94,13 +106,30 @@ code {
 
 .note-header{
   background-color: #FFFFFF;
-  height: 100px;
   border-radius: 8px;
-  padding: 24px;
+  padding: 24px 24px 0 24px;
+}
+.note-text{
+  font-weight: bold;
+  font-size: 20px;
+}
+.all-note-text{
+  border-bottom: solid 2px #5141A4;
+  padding-bottom: 16px;
+  color: #5141A4;
+  font-weight: bold;
+  font-size: 14px;
 }
 .note-first-row{
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.select-category{
+  height: 35px;
+  width: 160px;
+  border-radius: 4px;
+  padding: 0px 10px;
 }
 .add-new-note{
   background-color: #5141A4;
@@ -109,10 +138,12 @@ code {
   padding: 10px;
   border: none;
   color: white;
+  margin-left: 10px;
 }
 .note-second-row{
   display: flex;
   justify-content: space-between;
+  align-items: center;
 
 }
 .box-image{
@@ -122,4 +153,215 @@ code {
 .purple-box-image{
   width: 18.67px;
   height: 18.67px;
+  margin-left: 10px;
+}
+
+.create-section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 112px;
+}
+.card-image{
+  height: 193px;
+  width: 195px;
+}
+.create-paragraph{
+  width: 396px;
+  text-align: center;
+  font-weight: 400;
+  margin: 32px auto;
+  font-size: 14px;
+  line-height: 19.6px;
+}
+.create-new-note{
+  background-color: #5141A4;
+  cursor: pointer;
+  border-radius: 4px;
+  padding: 19px 24px;
+  border: none;
+  color: white;
+  font-size: 14px;
+}
+
+@media only screen and (max-width: 600px) {
+  .app-container{
+    display: flex;
+    padding: 20px;
+  }
+  .other-pages{
+    flex: 4;
+    padding-left: 0px;
+  }
+  .sidebar-container{
+    display: none;
+  }
+  .note-header{
+    padding: 16px;
+  }
+  .note-text{
+    font-weight: bold;
+    font-size: 20px;
+    text-align: left;
+  }
+  .note-first-row{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+  }
+  .create-paragraph{
+    width: 100%;
+  }
+
+}
+
+.error-container{
+  margin: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.error-message{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #FFFFFF;
+  width: 428px;
+  padding: 40px;
+  margin-top: -150px;
+}
+.error-message h1{
+  font-size: 40px;
+  margin: 0;
+}
+.error-message p{
+  font-size: 14px;
+  text-align: center;
+  margin: 16px auto;
+}
+.error-image{
+  display: flex;
+}
+.mobile{
+  height: 340px;
+  width: 161px;
+}
+.signal{
+  margin-top: -220px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 55px;
+  width: 55px;
+}
+.man{
+  height: 357px;
+  width: 176px;
+  margin-left: 20px;
+}
+.mobile-image{
+  display: flex;
+  flex-direction: column;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .error-message{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: #FFFFFF;
+    width: 340px;
+    padding: 40px;
+    margin-top: -150px;
+  }
+  .error-message h1{
+    font-size: 40px;
+    margin: 0;
+  }
+  .error-message p{
+    font-size: 14px;
+    text-align: center;
+    margin: 16px auto;
+  }
+
+}
+
+
+.note-form > div{
+  margin-bottom: 10px;
+}
+
+.note-form > input{
+  border-radius: 2px solid #ccc;
+  height:12px;
+  color:red
+}
+
+.last-added{
+  position: relative;
+  right: 10px;
+  width:140px;
+  height:35px;
+  border-radius: 5px;
+  padding-left: 10px;
+}
+
+.input{
+  width:200px;
+  height:30px;
+  margin-bottom:10px;
+  border:1px solid #ccc;
+
+}
+.category{
+  height:10px;
+  width:10pxl
+}
+.click{
+  color:#5141A4;
+}
+.upload-file{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-height: 100vh;
+  border:2px dashed #ccc;
+}
+
+.notes{
+  margin-top: 10px;
+  width:100%;
+  height: 168px;
+}
+
+
+.modal-container .overlay{ 
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+}
+.modal-content{
+  background-color: white;
+  align-items: center;
+  margin-left: 705px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.overlay {
+  background: rgba(58, 57, 57, 0.8);
+  height: 100vh;
+}
+
+body.active-modal{
+  overflow-y: hidden;
 }
