--- a/src/index.css
+++ b/src/index.css
@@ -45,11 +45,13 @@ body {
 .nav-bell{
   height: 19.5px;
   width: 15.17px;
+  cursor: pointer;
 }
 .nav-user-img{
   height: 40px;
   width: 40px;
   margin-left: 20px;
+  cursor: pointer;
 }
 .nav-links{
   display: flex;
@@ -63,6 +65,7 @@ body {
   margin-right: 11px;
   font-size: 14px;
   color: #727A8B;
+  cursor: pointer;
 }
 #note{
   color: #5141A4;
@@ -89,19 +92,7 @@ body {
   margin-bottom: 20px;
   background-color: #434D64;
   border-radius: 8px;
-  
-}
-.list-item{
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  padding: 14px 17px;
-  font-size: 16px;
-  
-}
-.list-item.active{
-  font-weight: 500;
-  color: black;
+    height: 15px;
 }
 
 .note-header{
@@ -174,6 +165,7 @@ body {
   margin: 32px auto;
   font-size: 14px;
   line-height: 19.6px;
+  line-height: 140%;
 }
 .create-new-note{
   background-color: #5141A4;
@@ -291,58 +283,52 @@ body {
 
 }
 
-
-.note-form > div{
-  margin-bottom: 10px;
+.file{
+  visibility: none;
+  display: none;
 }
-
-.note-form > input{
-  border-radius: 2px solid #ccc;
-  height:12px;
-  color:red
+label{
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
 }
-
-.last-added{
-  position: relative;
-  right: 10px;
-  width:140px;
-  height:35px;
-  border-radius: 5px;
-  padding-left: 10px;
+.drag{
+  font-weight: 500;
 }
-
-.input{
-  width:200px;
-  height:30px;
-  margin-bottom:10px;
-  border:1px solid #ccc;
-
-}
-.category{
-  height:10px;
-  width:10pxl
-}
-.click{
-  color:#5141A4;
+.browse{
+  color: #5141A4;
+  font-size: 14px;
 }
 .upload-file{
   display: flex;
+  border-radius: 4px;
+  border:2px dashed #D0D3D8;
   justify-content: center;
   align-items: center;
-  max-height: 100vh;
-  border:2px dashed #ccc;
+  flex-direction: column;
+  padding-top: 20px;
+  padding-bottom: 30px;
+  margin-bottom: 20px;
+  width: 100%;
+  cursor: pointer;
 }
-
+.upload-file button{
+  border: none;
+  background-color: transparent;
+}
+.new-note-text{
+  font-size: 28px;
+}
 .notes{
-  margin-top: 10px;
-  width:100%;
+  padding: 10px 15px;
   height: 168px;
 }
 
 
 .modal-container .overlay{ 
   width: 100vw;
-  height: 100vh;
   top: 0;
   left: 0;
   right: 0;
@@ -351,17 +337,91 @@ body {
 }
 .modal-content{
   background-color: white;
-  align-items: center;
-  margin-left: 705px;
+  width: 50%;
   display: flex;
   flex-direction: column;
-  text-align: center;
-}
-.overlay {
-  background: rgba(58, 57, 57, 0.8);
+  padding: 10px 50px !important;
+  float: right;
   height: 100vh;
 }
 
+.mobal-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.overlay {
+  background: rgba(58, 57, 57, 0.8);
+}
+.close-icon{
+  font-size: 24px;
+  cursor: pointer;
+}
+.close-icon:hover{
+  color: #5141A4;
+}
 body.active-modal{
   overflow-y: hidden;
+}
+.input-items{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5px;
+}
+.input-field{
+  padding: 0px 16px;
+  height: 45px;
+  margin-bottom: 20px;
+  border: 1px solid #D0D3D8;
+  font-size: 14px;
+  color: #727A8B;
+  border-radius: 4px;
+}
+.category-section{
+  width: 100%;
+  border: solid red;
+}
+.note-category{
+  width: 100%;
+  padding: 16px;
+  border: 1px solid #D0D3D8;
+}
+textarea{
+  border: 1px solid #D0D3D8;
+  font-size: 14px;
+  color: #727A8B;
+  border-radius: 4px;
+}
+.buttons{
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.cancel-btn{
+  color: #5141A4;
+  background-color: white;
+  border: solid 1px #5141A4;
+  cursor: pointer;
+  padding: 15px 24px;
+  width: 45%;
+  border-radius: 4px;
+}
+.create-btn{
+  background-color: #5141A4;
+  color: white;
+  border: none;
+  cursor: pointer;
+  padding: 15px 24px;
+  width: 45%;
+  border: 4px;
+}
+
+@media only screen and (max-width: 600px) {
+  .modal-content{
+    width: 85%;
+    display: flex;
+    padding: 30px 50px 0px 50px;
+    float: none;
+  }
 }
